# aquacroprice

./: .gitignore  PPO_evaluation_debug.txt  RandomAgent_evaluation_debug.txt  action_irrigation.py  algorithm_comparison.csv  compare_irrigation.py  debug.txt  dqn_vecnormalize.pkl  evaluate_agent.py  evaluation_results.csv  generate_weather.py  generated_weather_data.txt  irrigation_comparison.csv  monitor_logs.monitor.csv  optimize.py  ppo_vecnormalize.pkl  pyproject.toml  random_agent_evaluation_debug.txt  requirements.txt  simulation_results.csv  train.py  train2.py  train3.py  train_agent.py
aquacroprice/envs/: maize.py  rice.py  wheat.py
tensorboard/DQN_1/: events.out.tfevents.1726133623.ALKAFF-LAPTOP.65358.1
tensorboard/DQN_2/: events.out.tfevents.1726138061.ALKAFF-LAPTOP.96169.1
tensorboard/DQN_3/: events.out.tfevents.1726144135.ALKAFF-LAPTOP.128778.1
tensorboard/DQN_4/: events.out.tfevents.1726150300.ALKAFF-LAPTOP.170316.1
tensorboard/PPO_24/: events.out.tfevents.1726122602.ALKAFF-LAPTOP.1095.0
tensorboard/PPO_25/: events.out.tfevents.1726129455.ALKAFF-LAPTOP.47722.0
tensorboard/PPO_26/: events.out.tfevents.1726132030.ALKAFF-LAPTOP.65358.0
tensorboard/PPO_27/: events.out.tfevents.1726136545.ALKAFF-LAPTOP.96169.0
tensorboard/PPO_28/: events.out.tfevents.1726140736.ALKAFF-LAPTOP.124765.0
tensorboard/PPO_29/: events.out.tfevents.1726141315.ALKAFF-LAPTOP.128778.0
tensorboard/PPO_30/: events.out.tfevents.1726147433.ALKAFF-LAPTOP.170316.0
