[tool.poetry]
name = "aquacrop-rice"
version = "0.1.0"
description = "AquaCrop Gym Environment for Rice Crop"
authors = ["Muhammad Alkaff <m.alkaff@ulm.ac.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aquacrop = "^3.0.8"
gymnasium = "^0.29.1"
stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}
comet-ml = "^3.44.3"
optuna = {git = "https://github.com/optuna/optuna.git", rev = "master"}
poetry-plugin-export = "^1.8.0"
sb3-contrib = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
